Aggiunto metodo suspend alla classe User

--- a/views/hub/signup_manage.hbs
+++ b/views/hub/signup_manage.hbs
@@ -29,8 +29,8 @@
          <!-- Select operation-->
          {{#compare session.signup.step '==' 2}}
             <div class="d-grid gap-2 mt-1">
-               <button class="btn btn-primary" type="button" onclick="process('$');">Ripristina la password</button>
-               <button class="btn btn-primary" type="button" onclick="process('!');">Annulla la registrazione</button>
+               <button class="btn btn-warning" type="button" onclick="process('$');">Ripristina la password</button>
+               <button class="btn btn-danger" type="button" onclick="process('!');">Annulla la registrazione</button>
             </div>
          {{/compare}}
 
